@@ -6,7 +6,7 @@
 
 """Tag and send outgoing messages.
 
-Usage:  %(program)s [-c <file>] [-f <sender>] [-q] [-h] [ recip ... ]
+Usage:  %(program)s [-c <file>] [-f <sender>] [-q] [-O <file>] [-h] [ recip ... ]
 
 Where:
 	-c <file>
@@ -19,6 +19,11 @@ Where:
         -q
         --qfilter
            Return 99 to qfilter so it will not run qmail-queue itself.
+
+        -O <file>
+        --filter-outgoing-file <file>
+           Full pathname to your outgoing filter file.  Overrides
+           FILTER_OUTGOING in ~/.tmdarc.
 
 	--help
 	-h
@@ -53,13 +58,18 @@ def usage(code, msg=''):
     
 try:
     opts, args = getopt.getopt(sys.argv[1:],
-                               'c:qhf:', ['config-file=','qfilter','help'])
+                               'c:O:qhf:', ['config-file=',
+                                            'filter-outgoing-file=',
+                                            'qfilter',
+                                            'help'])
 except getopt.error, msg:
     usage(1, msg)
 
 for opt, arg in opts:
     if opt in ('-h', '--help'):
         usage(0)
+    elif opt in ('O', '--filter-outgoing-file'):
+	os.environ['TMDA_FILTER_OUTGOING'] = arg
     elif opt in ('-c', '--config-file'):
         os.environ['TMDARC'] = arg
     elif opt in ('-q', '--qfilter'):
